sol/np-egress.yaml
---
### np-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: internet-egress
spec:
  podSelector:
    matchLabels:
      run: debug-blue
  policyTypes:
  - Egress
  egress:
    - to:
      - ipBlock:
          cidr: 0.0.0.0/0
          except:
            - 23.23.23.23/32
      ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 443
---
### np-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dns-egress
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
    - to:
      - namespaceSelector:
         matchLabels:
          kubernetes.io/metadata.name: kube-system  
      ports:
        - protocol: TCP
          port: 53
        - protocol: UDP
          port: 53
